# chat

./: .gitignore  CLAUDE.md  README.md  SECURITY.md
.github/workflows/: publish-client-react.yml  publish-server-python.yml
docs/: RUNBOOK.md
docs/plans/: 2026-04-22-perf-beyond-audit-impl.md  2026-04-22-perf-tier-1-impl.md  2026-04-22-perf-tier-2-impl.md  2026-04-22-perf-tier-2b-impl.md  2026-04-23-team-communication-design.md  2026-04-23-team-communication-impl.md
examples/client-react/: main.tsx
examples/python/customer-support/: .gitignore  README.md  pyproject.toml
examples/python/customer-support/src/: chat.py  main.py  observability.py
examples/python/customer-support/src/agent/: assistant.py  client.py  provider.py
examples/python/monitoring-assistant/: README.md  pyproject.toml
examples/python/monitoring-assistant/src/: agent.py  main.py  settings.py
examples/python/organization-workspace/: README.md  pyproject.toml
examples/python/organization-workspace/src/: auth.py  chat.py  main.py  settings.py  tools.py
examples/python/organization-workspace/src/agent/: assistant.py  client.py  policy.py  provider.py
examples/python/organization-workspace/src/agent_legal/: __init__.py  assistant.py  client.py  provider.py
examples/python/organization-workspace/src/agent_medical/: __init__.py  assistant.py  client.py
examples/python/stock-tool/: README.md  pyproject.toml
examples/python/stock-tool/src/: chat.py  db.py  main.py
examples/react/: README.md  package-lock.json  package.json
examples/react/customer-support/: chat.tsx  layout.tsx  main.tsx  use-chat.ts
examples/react/monitoring-assistant/: README.md  app.tsx  inbox.tsx  layout.tsx
examples/react/organization-workspace/: app.tsx  chat.tsx  layout.tsx  use-chat.ts  use-workspace.ts  workspaces.ts
examples/react/src/: main.tsx
examples/react/src/examples/customer-support/: app.tsx  chat.tsx  use-chat.ts
examples/react/src/examples/organization-workspace/: app.tsx  chat.tsx  use-chat.ts  use-workspace.ts
examples/react/src/examples/stock-tool/: app.tsx  chat.tsx  use-chat.ts
examples/react/stock-tool/: app.tsx  chat.tsx  layout.tsx  use-chat.ts
examples/server-python/customer-support/: README.md  pyproject.toml
examples/server-python/customer-support/src/: agent.py  auth.py  chat.py  main.py  server.py  settings.py  tools.py
examples/server-python/customer-support/src/agent/: assistant.py  client.py
examples/server-python/stock-tool/: README.md  pyproject.toml
examples/server-python/stock-tool/src/: auth.py  main.py  server.py
examples/server-python/stream/: main.py
