[project]
name = "rfnry-chat-example-monitoring-assistant"
version = "0.0.1"
description = "Standalone proactive AI agent — no chat server, webhook-driven"
requires-python = ">=3.11"
dependencies = [
    "rfnry-chat-client",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
]

[tool.uv.sources]
rfnry-chat-client = { path = "../../../packages/client-python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
