[project]
name = "rfnry-chat-example-customer-support"
version = "0.0.1"
description = "Chat server + external-ish AI agent example"
requires-python = ">=3.11"
dependencies = [
    "rfnry-chat-server",
    "rfnry-chat-client",
    "anthropic>=0.80.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
rfnry-chat-server = { path = "../../../packages/server-python", editable = true }
rfnry-chat-client = { path = "../../../packages/client-python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
