[project]
name = "rfnry-chat-example-stock-tool"
version = "0.0.1"
description = "Server-only chat example — users invoke server-side tool handlers"
requires-python = ">=3.11"
dependencies = [
    "rfnry-chat-server",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
rfnry-chat-server = { path = "../../../packages/server-python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
